--- a/src/Easanles/AtletismoBundle/Resources/views/Informes/list_cuotas.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Informes/list_cuotas.html.twig
@@ -65,12 +65,12 @@
                <div class="btn-group visible-xs-block">
                   <button type="button" class="btn btn-xs btn-block btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-option-horizontal"></span></button>
                   <ul class="dropdown-menu pull-right">
-                     <li><a href="#" onClick="showModal('ediCUOTA', {{ com.sid }}, {{ com.sid }}, '{{ com.temp }}/{{ (com.temp + 1)|slice(2, 2) }}')"><span class="glyphicon glyphicon-pencil"></span> Editar</a></li>
+                     <li><a href="#" onClick="showModal('ediCUOTA', {{ com.sid }}, '{{ com.nombre }}', '{{ com.temp }}/{{ (com.temp + 1)|slice(2, 2) }}')"><span class="glyphicon glyphicon-pencil"></span> Editar</a></li>
                      <li><a class="bg-danger" href="#" onClick="showModal('delCUOTA', {{ com.sid }}, {{ com.nombre }}, '{{ com.temp }}/{{ (com.temp + 1)|slice(2, 2) }}')"><div class="text-danger"><span class="glyphicon glyphicon-remove"></span> Borrar</div></a></li>
                   </ul>
                </div>
                <div class="hidden-xs">
-                  <button type="button" class="btn btn-xs btn-default" data-toggle="tooltip" data-placement="top" title="Editar" onClick="showModal('ediCUOTA', {{ com.sid }}, {{ com.sid }}, '{{ com.temp }}/{{ (com.temp + 1)|slice(2, 2) }}')"><span class="glyphicon glyphicon-pencil"></span></a>
+                  <button type="button" class="btn btn-xs btn-default" data-toggle="tooltip" data-placement="top" title="Editar" onClick="showModal('ediCUOTA', {{ com.sid }}, '{{ com.nombre }}', '{{ com.temp }}/{{ (com.temp + 1)|slice(2, 2) }}')"><span class="glyphicon glyphicon-pencil"></span></a>
                   <button type="button" class="btn btn-xs btn-danger" data-toggle="tooltip" data-placement="top" title="Borrar" onClick="showModal('delCUOTA', {{ com.sid }}, '{{ com.nombre }}', '{{ com.temp }}/{{ (com.temp + 1)|slice(2, 2) }}')"><span class="glyphicon glyphicon-remove"></span></button>
                </div>
             </td>
