--- a/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/form_inscripcion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/form_inscripcion.html.twig
@@ -44,7 +44,7 @@
 {% endblock %}
 
 {% block container %}
-    <h1 id="container_title" class="row page-header">Inscribir atletas <small> - {{ com.nombre }} ({{ com.temp }}/{{ (com.temp + 1)|slice(2, 2) }})</small></h1>
+    <h1 id="container_title" class="row page-header">Inscribir atletas <small> - {{ com.nombre }} ({{ com.temp }}/{{ (com.temp + 1)|slice(2, 2) }})</small>{% if com.esCuota %} <span class="text-muted pull-right">Cuota</span>{% endif %}</h1>
    
    {% if exception is defined %}
    <div class="alert alert-danger alert-dismissible fade in" role="alert"> <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button> <span class="glyphicon glyphicon-exclamation-sign"></span> {{ exception }}</div>
