--- a/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/sel_confirmar.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/sel_confirmar.html.twig
@@ -6,7 +6,8 @@
       <tbody>
          <tr>
             <th>Atleta</th>
-            <th>Prueba</th>
+            <th>Categoría</th>
+            {% if com.esCuota == false %}<th>Prueba</th>{% endif %}
             <th class="hidden-xs">Precio estandar</th>
             <th>Precio</th>
             <th><abbr title="Confirmar" class="visible-xs-block">Conf.</abbr><div class="hidden-xs">Confirmar</div></th>
@@ -25,7 +26,8 @@
             {% set precioTotal = precioTotal + ent.pru.coste %}
             <tr id="tr-{{ ent.atl.id }}-{{ ent.pru.sid }}">
                <td>{{ ent.atl.apellidos }}, {{ ent.atl.nombre }}</td>
-               <td>{{ tpr }}</td>
+               <td>{{ ent.cat }}</td>
+               {% if com.esCuota == false %}<td>{{ tpr }}</td>{% endif %}
                <td class="hidden-xs">{{ ent.pru.coste|number_format(2, ',', '.') }}€</td>
                <td><div class="input-group"><input id="coste-{{ ent.atl.id }}-{{ ent.pru.sid }}" type="number" class="form-control coste-ins" value="{{ ent.pru.coste }}" onInput="updateCosteTotal()"><span class="input-group-addon">€</span></div></td>
                <td><input id="cb-{{ ent.atl.id }}-{{ ent.pru.sid }}" type="checkbox" checked onClick="toggleConfRow(this)"></button></td>
