--- a/src/Easanles/AtletismoBundle/Resources/views/Informes/list_cuotas.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Informes/list_cuotas.html.twig
@@ -51,6 +51,7 @@
             <th>Nombre cuota</th>
             <th class="hidden-xs">Fecha inicio</th>
             <th class="hidden-xs">Fecha fin</th>
+            <th><abbr title="Pagos pendientes" class="visible-xs-block">Pag. pend.</abbr><div class="hidden-xs">Pagos pendientes</div></th>
             <th><abbr title="Atletas inscritos" class="visible-xs-block">Atl.</abbr><div class="hidden-xs">Atletas inscritos</div></th>
             <th><abbr title="Acciones" class="visible-xs-block">Acc.</abbr><div class="hidden-xs">Acciones</div></th>
          </tr>
@@ -60,6 +61,7 @@
             <td>{{ com.nombre }}</td>
             <td class="hidden-xs">{% if com.fecha is null %} <em class="text-muted">Sin fecha</em> {% else %} {{ com.fecha|date('d/m/Y') }} {% endif %} </td>
             <td class="hidden-xs">{% if com.fechaFin is null %} <em class="text-muted">Sin fecha</em> {% else %} {{ com.fechaFin|date('d/m/Y') }} {% endif %} </td>
+            {% if com.numatletas > 0 and com.pagosPend == 0 %}<td class="success text-success">{{ com.pagosPend }}</td>{% else %}<td>{{ com.pagosPend }}</td>{% endif %}
             <td{% if com.numatletas == 0 %} class="warning text-warning"{% endif %}>{{ com.numatletas }} <a type="button" class="btn btn-xs btn-{% if com.numatletas == 0 %}warning{% else %}default{% endif %} pull-right" data-toggle="tooltip" data-placement="top" title="Inscribir atletas" href="{{ path('listado_inscripciones', {'sidCom': com.sid}) }}"><span class="glyphicon glyphicon-user"></span></a></td>
             <td>
                <div class="btn-group visible-xs-block">
