--- a/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/sel_confirmar.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/sel_confirmar.html.twig
@@ -8,6 +8,7 @@
             <th>Atleta</th>
             <th>Categoría</th>
             {% if com.esCuota == false %}<th>Prueba</th>{% endif %}
+            {% if com.esCuota == true %}<th>Tipo</th>{% endif %}
             <th class="hidden-xs">Precio estandar</th>
             <th>Precio</th>
             <th><abbr title="Confirmar" class="visible-xs-block">Conf.</abbr><div class="hidden-xs">Confirmar</div></th>
@@ -27,6 +28,7 @@
             <tr id="tr-{{ ent.atl.id }}-{{ ent.pru.sid }}">
                <td>{{ ent.atl.apellidos }}, {{ ent.atl.nombre }}</td>
                <td>{{ ent.cat }}</td>
+               <td>{{ ent.atl.tipo }}</td>
                {% if com.esCuota == false %}<td>{{ tpr }}</td>{% endif %}
                <td class="hidden-xs">{{ ent.pru.coste|number_format(2, ',', '.') }}€</td>
                <td><div class="input-group"><input id="coste-{{ ent.atl.id }}-{{ ent.pru.sid }}" type="number" class="form-control coste-ins" value="{{ ent.pru.coste }}" onInput="updateCosteTotal()"><span class="input-group-addon">€</span></div></td>
@@ -34,8 +36,8 @@
             </tr>
          {% endfor %}
          <tr>
-            <td colspan="3" class="text-right hidden-xs"><strong>Precio total: </strong></td>
-            <td colspan="2" class="text-right visible-xs"><strong>Precio total: </strong></td>
+            <td colspan="4" class="text-right hidden-xs"><strong>Precio total: </strong></td>
+            <td colspan="3" class="text-right visible-xs"><strong>Precio total: </strong></td>
             <td><strong id="coste-total">{{ precioTotal|number_format(2, ',', '.') }}€</strong></td>
             <td></td>
          </tr>
