--- a/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/sel_confirmar.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/sel_confirmar.html.twig
@@ -28,7 +28,7 @@
             <tr id="tr-{{ ent.atl.id }}-{{ ent.pru.sid }}">
                <td>{{ ent.atl.apellidos }}, {{ ent.atl.nombre }}</td>
                <td>{{ ent.cat }}</td>
-               <td>{{ ent.atl.tipo }}</td>
+               {% if com.esCuota == true %}<td>{{ ent.atl.tipo }}</td>{% endif %}
                {% if com.esCuota == false %}<td>{{ tpr }}</td>{% endif %}
                <td class="hidden-xs">{{ ent.pru.coste|number_format(2, ',', '.') }}€</td>
                <td><div class="input-group"><input id="coste-{{ ent.atl.id }}-{{ ent.pru.sid }}" type="number" class="form-control coste-ins" value="{{ ent.pru.coste }}" onInput="updateCosteTotal()"><span class="input-group-addon">€</span></div></td>
