--- a/src/Easanles/AtletismoBundle/Resources/views/Competicion/form_competicion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Competicion/form_competicion.html.twig
@@ -139,6 +139,7 @@
               <a type="button" class="btn btn-m btn-default col-xs-3" href="{{ path('listado_competiciones') }}"><span class="glyphicon glyphicon-menu-left"></span> Cancelar</a>
               <button type="submit" class="btn btn-m btn-primary col-xs-offset-1 col-xs-8"><span class="glyphicon glyphicon-save"></span> Guardar</button>
               {% endif %}
+              <em class="pull-right">* Obligatorio</em>
           </div>
        </div>
     </div>
