Bug formulario editar inscripcion en Chrome

--- a/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
@@ -25,7 +25,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">{% block modaldismiss %}Cancelar{% endblock %}</button>
-        {% block modalprimary %}<button type="button" class="btn btn-primary" href="#">Aceptar</button>{% endblock %}
+        {% block modalprimary %}<button type="button" class="btn btn-primary">Aceptar</button>{% endblock %}
       </div>
     </div>
   </div>
